--- a/WEB/cadastro/cadastro.html
+++ b/WEB/cadastro/cadastro.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
     <div class="quadro-lateral">
+        <div class="text-info">
+            <center><h1>Por que utilizar o DD e suas vantagens!</h1></center>
+            <p>Nosso site foi desenvolviedo com o intuito de ajudar pessoas como você, que estão com algum sintoma e não tem tempo de ir ao medico ou até mesmo para solucionar alguma possivel duvida!
+            <br><br>Aqui estão algum dos motivos para o qual o nosso site é usado e o mais eficiente!<br>
+               <br> - Base de Dados constantemente atulizada com dados anuais;
+               <br> - Aprimoramento de resposta rapida e eficaz;<br>
+            </p>
         <a href=""><button class="button-back">Voltar</button></a>
+        </div>   
     </div>
     <main>
     <section id="input-cadastro">
