--- a/WEB/cadastro/cadastro.html
+++ b/WEB/cadastro/cadastro.html
@@ -10,23 +10,26 @@
 </head>
     <div class="quadro-lateral">
         <div class="text-info">
-            <center><h1>Por que utilizar o DD e suas vantagens!</h1></center>
-            <p>Nosso site foi desenvolviedo com o intuito de ajudar pessoas como você, que estão com algum sintoma e não tem tempo de ir ao medico ou até mesmo para solucionar alguma possivel duvida!
-            <br><br>Aqui estão algum dos motivos para o qual o nosso site é usado e o mais eficiente!<br>
-               <br> - Base de Dados constantemente atulizada com dados anuais;
-               <br> - Aprimoramento de resposta rapida e eficaz;<br>
-            </p>
-        <a href=""><button class="button-back">Voltar</button></a>
+            <center><h1>Faça seu cadastro</h1></center>
+            <p>Receba alguns beneficios ao seu cadastrar!<br>
+            <br> - Ganhe consultas ilimitadas <br>
+            <br> - Ganhe a função de salvar seu diagnostico em PDF<br>
+            <br>Com o cadastro do nosso site, você ganha além dos beneficios citados acima muito mais com o nosso serviço e ajuda 24hrs de um diagnostico online   
+        </p>
+        <a href="../index.html"><button class="button-back">VOLTAR</button></a>
         </div>   
     </div>
     <main>
-    <section id="input-cadastro">
-        <form>
-            <h2>Faça seu cadrasto AGORA!</h2>
-            <input type="text" placeholder="Digite um nome" name="nome_paciente" required>
-            <input type="email" placeholder="Digite seu email" name="email" required>
-            <input type="password" placeholder="Digite uma senha" name="senha" required>
-            <button type="submit">Cadastre-se</button>
+    <div id="input-cadastro">
+        <form action="">
+            <h2>Coloque as informações e termine seu cadastro!</h2>
+            <label for="email">NOME</label>
+             <input type="text" name="name" id="name" placeholder="Insira seu Nome..." required>
+            <label for="email">E-MAIL</label>
+             <input type="email" name="email" id="email" placeholder="Insira seu Email..." required>
+            <label for="password">SENHA</label>
+             <input type="password" name="password" id="password" placeholder="Insira sua senha..." required>
+             <input type="reset" value="LIMPAR"><input type="submit" value="Cadastrar">
         </form>
-    </section>
+    </div>
 </main>
