--- a/WEB/cadastro/cadastro.html
+++ b/WEB/cadastro/cadastro.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+<div class="pag-title">
+    <h1><img src="../img/ddheader-removebg-preview.png">DD - Diagnostico Digital</h1>
+</div>
     <div class="quadro-lateral">
         <div class="text-info">
             <center><h1>Faça seu cadastro</h1></center>
