--- a/WEB/index.html
+++ b/WEB/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
     <header>
-        <h1><img src="./img/ddheader-removebg-preview.png">DD - Diagnostico Digital</h1></a>
+        <h1><img src="./img/ddheader-removebg-preview.png">DD - Diagnostico Digital</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Entrar</a></li>
