--- a/WEB/cadastro/cadastro.html
+++ b/WEB/cadastro/cadastro.html
@@ -32,7 +32,9 @@
              <input type="email" name="email" id="email" placeholder="Insira seu Email..." required>
             <label for="password">SENHA</label>
              <input type="password" name="password" id="password" placeholder="Insira sua senha..." required>
-             <input type="reset" value="LIMPAR"><input type="submit" value="Cadastrar">
+             <input type="reset" value="LIMPAR"><input onclick="cadastrar()" type="submit" value="CADASTRAR">
         </form>
     </div>
 </main>
+<script src="script.js"></script>
+</html>
