--- a/WEB/index.html
+++ b/WEB/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Entrar</a></li>
-                <li><a href="./cadastro/cadastro.html">Cadastro</a></li>
+                <li><a href="./cadastro/index.html">Cadastro</a></li>
             </ul>
         </nav>
     </header>
