--- a/WEB/cadastro/index.html
+++ b/WEB/cadastro/index.html
@@ -22,20 +22,22 @@
         <a href="../index.html"><button class="button-back">VOLTAR</button></a>
         </div>   
     </div>
+    <section id="cadastro">
     <main>
     <div id="input-cadastro">
         <form action="">
             <h2>Coloque as informações e termine seu cadastro!</h2>
             <label for="email">NOME</label>
-             <input type="text" name="name" id="name" placeholder="Insira seu Nome..." required>
+             <input type="text" name="name" id="nome_cli" placeholder="Insira seu Nome..." required>
             <label for="email">E-MAIL</label>
              <input type="email" name="email" id="email" placeholder="Insira seu Email..." required>
             <label for="password">SENHA</label>
-             <input type="password" name="password" id="password" placeholder="Insira sua senha..." required>
+             <input type="password" name="password" id="senha" placeholder="Insira sua senha..." required>
              <input type="reset" value="LIMPAR"><input onclick="cadastrar()" type="submit" value="CADASTRAR">
         </form>
     </div>
 </main>
+</section>
 <script src="script.js"></script>
 </html>
 </body>
