--- a/teste/index.html
+++ b/teste/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">""
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vital AirLines Login</title>
+    <title>Velaris - Login</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
-<body>
-    <header>
-        <img src="logo.png" alt="Vital AirLines">
-        <a href="#">HOME</a>
-    </header>
-     <div id="logincontainer">
-         <h1>LOGIN</h1>
-         <form action="">
-             <label for="email">E-MAIL</label>
-             <input type="email" name="email" id="email" placeholder="Insira seu Email..." autocomplete="off">
-             <label for="password">SENHA</label>
-             <input type="password" name="password" id="password" placeholder="Insira sua senha...">
-             <a href="#" id="forgotpass">Redefinir senha</a>
-             <input type="submit" value="Login">
-         </form>
-         <div id="social">
-            <p>Ou entre pelas suas redes sociais</p>
-            <img src="face.png" alt="Facebook" onclick="face()">
-            <img src="google.png" alt="Google" onclick="google()">
-            <img src="twitter.png" alt="Twitter" onclick="twitter()">
-         </div>
-         <div id="register">
-            <p>Ainda não possui conta?</p>
-            <a href="#">Registrar</a>
-         </div>
-     </div>
+<body onload="verificaLogin()">
+    <div class="container">
+            <header>
+                <img src="../assets/velaris.png" class="velaris" alt="Velaris Books">
+            </header>
+            <main>
+                <form>
+                    <h1>Bem vindos a Velaris Books</h1>
+                    <input type="text" placeholder="   Nome..." id="nome">
+                    <br>
+                    <br>
+                    <input type="text" placeholder="   Email..." id="email">
+                    <br>
+                    <br>
+                    <input type="password" placeholder="   Senha..." id="senha">
+                    <input type="file" id="foto" hidden>
+                    <img src="../assets/camera.png" alt="Camera" id="camera" width="32" hidden>
+                    <a onclick="cadastrar()">Não possui cadastro? Cadastrar-se</a>
+                    <br>
+                    <button type="button" id="login" onclick="conectar()">Login</button>
+                </form>
+            </main>
+        </div>
 </body>
+<script src="./script.js"></script>
 </html>
