--- a/WEB/cadastro/index.html
+++ b/WEB/cadastro/index.html
@@ -19,7 +19,7 @@
             <br> - Ganhe a função de salvar seu diagnostico em PDF<br>
             <br>Com o cadastro do nosso site, você ganha além dos beneficios citados acima muito mais com o nosso serviço e ajuda 24hrs de um diagnostico online   
         </p>
-        <a href="../index.html"><button class="button-back">VOLTAR</button></a>
+        <a href="../home/index.html"><button class="button-back">VOLTAR</button></a>
         </div>   
     </div>
     <section id="cadastro">
