--- a/WEB/login/index.html
+++ b/WEB/login/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Cadastro e Login</title>
-  </head>
-  <body>
-    <form action="">
-      <h1>Login</h1>
-      <label for="login">Login:</label>
-      <input type="text" name="login" id="login" />
-      <label for="senha">Senha:</label>
-      <input type="password" name="senha" id="senha" />
-      <div class="botoes">
-        <input type="submit" class="cadastro" id="entrar" value="Entrar" />
-        <input type="reset" class="limpa" value="Limpar" />
-      </div>
-    </form>
-    <a href="index.html"></a>
-    <script src="script.js"></script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DD - Diagnostico Digital </title>
+    <link rel="shortcut icon" type="image/png" href="../img/titlelogo.png"/>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<div class="pag-title">
+    <h1><img src="../img/ddheader-removebg-preview.png">DD - Diagnostico Digital</h1>
+</div>
+    <div class="quadro-lateral">
+        <div class="text-info">
+            <center><h1>Entre na sua conta</h1></center>
+            <center><h2>Não esqueça de!</h2></center>
+            <p><br> - Não esqueça de salvar seu diagnostico em PDF <br>
+            <br> - Coloque informações verdadeiras sobre você e receba o melhor resultado possivel<br>
+            <br> - Nosso sistema é atulizado constantemente para os melhores e mais precisos resultados para você	e sua familia<br>
+            <br>Lembre que nosso site esta aqui para ajudar você a receber um diagnostico com resultados possiveis com os dados informados, logo apos o diagnostico recomendamos que você va a uma medico especializado para uma consulta profissional
+        </p>
+        <a href="../home/index.html"><button class="button-back">VOLTAR</button></a>
+        </div>   
+    </div>
+    <section id="cadastro">
+    <main>
+    <div id="input-cadastro">
+        <form action="">
+            <h2>Entre na sua conta</h2>
+            <label for="email">E-MAIL</label>
+             <input type="email" name="email" id="email" placeholder="Insira seu Email..." required>
+            <label for="password">SENHA</label>
+             <input type="password" name="password" id="senha" placeholder="Insira sua senha..." required>
+             <a href="../cadastro/index.html"><p>Caso você não tenha uma conta, faça seu cadastro!</p></a>
+             <input onclick="cadastrar()" type="submit" value="entrar">
+        </form>
+    </div>
+</main>
+</section>
+<script src="script.js"></script>
 </html>
+</body>
