Readme, home updated

--- a/WEB/home/index.html
+++ b/WEB/home/index.html
@@ -3,71 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DD - Diagnostico Digital </title>
     <link rel="shortcut icon" type="image/png" href="../img/titlelogo.png"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Diagnóstico Digital - Home</title>
 </head>
+<body>
     <header>
-        <h1><img src="../img/ddheader-removebg-preview.png">DD - Diagnostico Digital</h1>
-        <nav>
-            <ul>
-                <li><a href="../login/index.html">Entrar</a></li>
-                <li><a href="../cadastro/index.html">Cadastro</a></li>
-            </ul>
+        <nav class="section_container nav_container">
+            <div class="nav_logo">Diagnóstico<span>Digital</span></div>
+            <ul class="nav_links">
+                <li class="link"><a href="#">Home</a></li>
+                <li class="link"><a href="../cadastro/index.html">Cadastre-se</a></li>
+                <a href="../login/index.html"><button class="btn">Entrar</button></a>
+        </ul>  
         </nav>
-    </header>
-    <div class="background-container"></div>
-    <br>
-    <br>
-    <br>
-    <div class="card-container">
-        <div class="card">
-          <img src="https://th.bing.com/th/id/R.87869f98005ce1290574dead13d4f49f?rik=%2bh%2f04Ixvkm39wQ&pid=ImgRaw&r=0" alt="Image 1">
-          <div class="card-content">
-            <h2 class="card-title">Faça sua consulta online agora!</h2>
-            <p class="card-description">Coloque seus sintomas e iremos lhe dar a soluçao e a melhor orientaçao!</p>
-            <a href="../noticias/futebol.html" class="card-button">Clique aqui e faça sua consulta!</a>
-          </div>
+        <div class="section_container header_container">
+            <div class="header_content">
+                <h1>Tenha uma experiencia incrivel com Diagnostico Digital</h1>
+                <p>Se está com dúvida, o Diagnostico Digital te ajuda!!</p>
+                <a href="../login/index.html"><button class="btn">Entrar</button></a>
+        </div>
+        <div class="header_form">
+            <form>
+                <h4>Faça sua consulta online agora!</h4>
+                <input type="text" placeholder="Digite seu nome completo" required>
+                <button class="btn form_btn">Fazer Consulta Online</button>
+            </form>
         </div>
     </div>
-    <br>
-    <section class="icon-section">
-        <div class="icon-container">
-            <div class="icon-ball">
-                <i class="fas fa-key"></i>
-                <h1>Cadastre-se ja!</h1>
-                <p>Faça seu cadastro de maneira rapida e segura!</p>
-            </div>
-            <div class="icon-ball">
-                <i class="fas fa-hospital"></i>
-                <h1>Diagnostico Rapido e Eficaz!</h1>
-                <p>Diga o que esta sentido e falaremos os possiveis sintomas!</p>
-            </div>
-            <div class="icon-ball">
-                <i class="	fas fa-check"></i>
-                <h1>Com dados veridicos!</h1>
-                <p>Nós baseamos em dados verdadeiros para o melhor diagnostico possivel para você!</p>
-            </div>
-        </div>
-    </section>
-    <div class="background-container-down">
-        <div class="text-box">
-            <center><h1>Por que utilizar o DD e suas vantagens!</h1></center>
-            <p>Nosso site foi desenvolviedo com o intuito de ajudar pessoas como você, que estão com algum sintoma e não tem tempo de ir ao medico ou até mesmo para solucionar alguma possivel duvida!
-            <br><br>Aqui estão algum dos motivos para o qual o nosso site é usado e o mais eficiente!<br>
-               <br> - Base de Dados constantemente atulizada com dados anuais;
-               <br> - Aprimoramento de resposta rapida e eficaz;
-               <br> - Facil acessibilidade para pessoas idosas;
-               <br> - Suporte online simples e de facil comunicação.<br>
-               <br>Esses são alguns dos motivos pelo qual você deve usar o DD, então não perca tempo, faça seu cadastro agora e sua consulta online! 
-            </p>
-                <center><a href="../cadastro/index.html"><button class="button-cad">Cadastre-se</button></a></center>
+</header>
+<section class="section_container service_container">
+    <div class="service_header">
+        <div class="service_header_content">
+            <h2 class="section_header">Nossos Serviços</h2>
+            <p>Um pouquinho de nossos serviços</p>
         </div>
     </div>
-    <br>
-    <footer>
-        <center><p><font color = #0056b3>&copy; 2025 DD - Diagnostico Digital. Todos os direitos reservados.</p></font></center>
-    </footer>
-</body>
+    <div class="service_grid">
+        <div class="service_card">
+            <span><i class="ri-key-2-line"></i></span>
+            <h4>Cadastre-se Já!</h4>
+            <p> Faça seu cadastro de maneira rápida e segura!</p>
+            <a href="../cadastro/index.html">Cadastrar</a>
+        </div>
+            <div class="service_card">
+                <span><i class="ri-article-line"></i></span>
+                <h4>Diagnosticos rápidos e eficazes!</h4>
+                <p>Diga o que está sentindo e te daremos os possíveis resultados!</p>
+                <a href="#">Baixar em pdf</a>
+            </div>
+                <div class="service_card">
+                    <span><i class="ri-arrow-up-double-fill"></i></span>
+                    <h4>Com dados verificados!</h4>
+                    <p>Nós baseamos em dados verificados para o melhor diagnostico possível para você!</p>
+                    <a href="#">Conversar com a IA</a>
+                </div>
+            </div>
+        </section>
+        <section class="section_container about_container">
+            <div class="about_content">
+                <h2 class="section_header">Conheça um pouco sobre nosso site</h2>
+                <P>
+                    <span>
+                        <i class="ri-arrow-right-line"></i>
+                        Nosso site foi desenvolvido com intuito de ajudar pessoas como você que 
+                    estão com algum sintoma e não tem tempo de ir ao médico ou até mesmo
+                    para solucionar alguma possível dúvida!
+                    </span>
+                    <br>
+                    <br>
+                <span>
+                <i class="ri-arrow-right-line"></i>
+                Aqui estão alguns dos motivos para qual o nosso site é usado e o mais eficiente!
+                </span></P>
+                <p>
+                <span><i class="ri-arrow-right-line"></i></span>Base de Dados constantemente atualizada com dados anuais.
+                <br>
+                <span><i class="ri-arrow-right-line"></i></span>Aprimoramento de respostas rapidas e eficaz.
+                <br>
+                <span><i class="ri-arrow-right-line"></i></span>Fácil acessibilidade para pessoas idosas.
+                <br>
+                <span><i class="ri-arrow-right-line"></i></span>Suporte online simples e de fácil comunicação.
+                </p>
+                <p>
+                <span><i class="ri-arrow-right-line"></i>
+                Essas são alguns dos motivos pelo qual você deve usar o Diagnostico Digital, 
+                então não perca tempo, faça seu cadastro agora e sua consulta online!
+                </p>
+            </div>
+            <div class="about_imagem">
+                <img src="../img/bdvqe3vd.png" alt="about"/>
+            </div>
+        </section>
+        <section class="section_container cuidados_container">
+            <div class="cuidados_header">
+                <div class="cuidados_header_content">
+                    <h2 class="section_header">Alguns Cuidados</h2>
+                    <p>Fique atento aos sintomas, caso tenha disponibilidade procure um médico.</p>
+                </div>
+        </section>
+        <footer class="footer">
+            <div class="section_container footer_container">
+                <div class="footer_col">
+                    <h3>Diagnóstico<span>Digital</span></h3>
+                    <p>
+                        Desenvolvido pelos alunos de Desenvolvimento de Sistema SENAI com o intuito educativo.
+                    </p>
+                </div>
+                <div class="footer_col">
+                    <h4>About Us</h4>
+                    <p>Home</p>
+                    <p>About Us</p>
+                    <p>Work With Us</p>
+                    <p>Our Blog</p>
+                    <p>Terms & Conditions</p>
+                </div>
+                <div class="footer_col">
+                    <h4>Contact US</h4>
+                    <p><i class="ri-mail-fill"></i>ddsuporte@gmail.com</p>
+                    <p><i class="ri-phone-fill"></i> (+55)1997134-8235</p>
+                </div>
+            </div>
+            <div class="footer_bar">
+                <div class="footer_bar_content">
+                    <p>&copy; 2025 DD - Diagnostico Digital. Todos os direitos reservados.</p>
+                </div>
+            </div>
+        </footer>
+        <script src="script.js"></script>
+    </body>
 </html>
