--- a/WEB/login/index.html
+++ b/WEB/login/index.html
@@ -37,7 +37,7 @@
               </div>
             </fieldset>
             <div class="forms_buttons">
-              <button type="button" class="forms_buttons-forgot">Esqueceu sua Senha?llçl</button>
+              <button type="button" class="forms_buttons-forgot">Esqueceu sua Senha?</button>
               <input type="submit" value="Log In" class="forms_buttons-action">
             </div>
           </form>
