--- a/WEB/cadastro/index.html
+++ b/WEB/cadastro/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DD - Diagnostico Digital </title>
     <link rel="shortcut icon" type="image/png" href="../img/titlelogo.png"/>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Login</title>
 </head>
-<div class="pag-title">
-    <h1><img src="../img/ddheader-removebg-preview.png">DD - Diagnostico Digital</h1>
-</div>
-    <div class="quadro-lateral">
-        <div class="text-info">
-            <center><h1>Faça seu cadastro</h1></center>
-            <p>Receba alguns beneficios ao seu cadastrar!<br>
-            <br> - Ganhe consultas ilimitadas <br>
-            <br> - Ganhe a função de salvar seu diagnostico em PDF<br>
-            <br>Com o cadastro do nosso site, você ganha além dos beneficios citados acima muito mais com o nosso serviço e ajuda 24hrs de um diagnostico online   
-        </p>
-        <a href="../home/index.html"><button class="button-back">VOLTAR</button></a>
-        </div>   
+<body>
+    <header>
+        <nav class="section_container nav_container">
+            <div class="nav_logo">Diagnóstico<span>Digital</span></div>
+        </nav>
+    </header>
+<center>
+    <br><br><br><br><br><br><br><br>
+    <div class="ring">
+        <i style="--clr:#e9f7f7;"></i>
+        <i style="--clr:#007bff;"></i>
+        <i style="--clr:#fb923c;"></i>
+        <div class="login">
+            <h2>Login</h2>
+            <div class="inputBx">
+                <input type="text" placeholder="Email">
+            </div>
+            <div class="inputBx">
+                <input type="password" placeholder="Senha">
+            </div>
+            <div class="inputBx">
+                <input type="submit" value="Entrar">
+            </div>
+            <div class="links">
+                <a href="#">Não possui cadastro?</a>
+            </div>
+        </div>
     </div>
-    <section id="cadastro">
-    <main>
-    <div id="input-cadastro">
-        <form action="">
-            <h2>Coloque as informações e termine seu cadastro!</h2>
-            <label for="email">NOME</label>
-             <input type="text" name="name" id="nome_cli" placeholder="Insira seu Nome..." required>
-            <label for="email">E-MAIL</label>
-             <input type="email" name="email" id="email" placeholder="Insira seu Email..." required>
-            <label for="password">SENHA</label>
-             <input type="password" name="password" id="senha" placeholder="Insira sua senha..." required>
-             <input type="reset" value="LIMPAR"><input onclick="cadastrar()" type="submit" value="CADASTRAR">
-        </form>
-    </div>
-</main>
-</section>
-<script src="script.js"></script>
-</html>
+</center>
+    <!--ring div ends here-->
 </body>
+</html>
+
+
+
