--- a/WEB/home/index.html
+++ b/WEB/home/index.html
@@ -24,40 +24,37 @@
                 <p>Se está com dúvida, o Diagnostico Digital te ajuda!!</p>
                 <a href="../login/index.html"><button class="btn">Entrar</button></a>
         </div>
-        <div class="header_form">
-            <form>
-                <h4>Faça sua consulta online agora!</h4>
-                <input type="text" placeholder="Digite seu nome completo" required>
-                <button class="btn form_btn">Fazer Consulta Online</button>
-            </form>
-        </div>
     </div>
 </header>
+
 <section class="section_container service_container">
     <div class="service_header">
         <div class="service_header_content">
-            <h2 class="section_header">Nossos Serviços</h2>
+            <h2 class="section_header">Quem é você?</h2>
             <p>Um pouquinho de nossos serviços</p>
         </div>
     </div>
     <div class="service_grid">
         <div class="service_card">
-            <span><i class="ri-key-2-line"></i></span>
-            <h4>Cadastre-se Já!</h4>
-            <p> Faça seu cadastro de maneira rápida e segura!</p>
-            <a href="../cadastro/index.html">Cadastrar</a>
+            <span><i class="ri-mental-health-line"></i></span>
+            <h4>Sou um Paciente</h4>
+            <p> Acesso ao bate-papo 24 horas com um especialista da saúde </p>
+            <br>
+            <a href="../cadastro/index.html">Entrar</a>
         </div>
             <div class="service_card">
-                <span><i class="ri-article-line"></i></span>
-                <h4>Diagnosticos rápidos e eficazes!</h4>
-                <p>Diga o que está sentindo e te daremos os possíveis resultados!</p>
-                <a href="#">Baixar em pdf</a>
+                <span><i class="ri-survey-line"></i></span>
+                <h4>Equipe de Triagem</h4>
+                <p>Acesso ao atendimento de triagem dos pacientes</p>
+                <br>
+                <br>
+                <a href="#">Entrar</a>
             </div>
                 <div class="service_card">
-                    <span><i class="ri-arrow-up-double-fill"></i></span>
-                    <h4>Com dados verificados!</h4>
-                    <p>Nós baseamos em dados verificados para o melhor diagnostico possível para você!</p>
-                    <a href="#">Conversar com a IA</a>
+                    <span><i class="ri-stethoscope-line"></i></span>
+                    <h4>Especialista da saúde</h4>
+                    <p>Acesso ao bate-papo <br>com os pacientes e disponibilização de diagnóstico</p>
+                    <a href="#">Entrar</a>
                 </div>
             </div>
         </section>
