--- a/WEB/login/index.html
+++ b/WEB/login/index.html
@@ -6,7 +6,17 @@
     <title>DD - Diagnostico Digital </title>
     <link rel="shortcut icon" type="image/png" href="../img/titlelogo.png"/>
     <link rel="stylesheet" href="style.css">
+    <title>Diagnóstico Digital - Home</title>
 </head>
+<body>
+    <header>
+        <nav class="section_container nav_container">
+            <div class="nav_logo">Diagnóstico<span>Digital</span></div>
+            <ul class="nav_links">
+            </ul>  
+        </nav>
+    </div>  
+</header>
 
 <section class="user">
     <div class="user_options-container">
